<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".DataUpdate">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/edit"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/label_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:hint="@string/id"
        android:labelFor="@+id/id_user"/>

    <EditText
        android:id="@+id/id_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="text"/>

    <TextView
        android:id="@+id/label_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:hint="@string/username"
        android:labelFor="@+id/username"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_update"
            android:onClick="update_data"
            android:text="@string/button_update"
            android:layout_width="@dimen/lebar_button"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_delete"
            android:onClick="hapus"
            android:text="@string/button_hapus"
            android:layout_width="@dimen/lebar_button"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"/>
    </RelativeLayout>
</LinearLayout>